# rust-htmx-starter

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: main.rs
src/routes/: index.rs
static/css/: app.css  input.css
templates/: base.html  index.html
