[package]
name = "rust-htmx-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web   = "4"
actix-files = "0.6"
askama      = "0.14"
askama_web  = { version = "0.14", features = ["actix-web-4"] }
serde       = { version = "1", features = ["derive"] }
env_logger  = "0.11"
log         = "0.4"